--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,7 +11,7 @@ RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
 COPY Gemfile Gemfile.lock ./
 
 # Install Bundler and gems
-RUN gem install bundler && bundle install
+RUN gem install bundler:2.5.18 && bundle install
 
 # Copy the rest of the application code
 COPY . .
