--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,10 +8,12 @@ WORKDIR /rails
 RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
 
 # Copy Gemfile and Gemfile.lock to the container
-COPY Gemfile Gemfile.lock ./
+COPY Gemfile ./
 
 # Install Bundler and gems
-RUN gem install bundler:2.5.18 && bundle install
+RUN gem install bundler && bundle install 
+
+
 
 # Copy the rest of the application code
 COPY . .
