--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV['POSTGRES_USER'] %>
   password: <%= ENV['POSTGRES_PASSWORD'] %>
-  host: <%= ENV['POSTGRES_HOST'] %>
+  host: db
 
 development:
   <<: *default
@@ -13,9 +13,6 @@ development:
 test:
   <<: *default
   database: brandcrunchbot_test
-  host: brandcrunchbot_test_db
-  username: brandcrunchbot
-  password: password123
 
 production:
   <<: *default
