--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,5 @@
 # Use the Ruby base image
-FROM ruby:latest
+FROM ruby:3.4.4
 
 # Set the working directory inside the container
 WORKDIR /rails
@@ -11,7 +11,7 @@ RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
 COPY Gemfile Gemfile.lock ./
 
 # Install Bundler and gems
-RUN gem install bundler:2.5.18 && bundle install
+RUN gem install bundler && bundle install
 
 # Copy the rest of the application code
 COPY . .
