--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ require:
   - rubocop-performance
   - rubocop-rails
   - rubocop-rspec
+  - ./rubocop/cop/style/redundant_keyword.rb
 
 AllCops:
   TargetRubyVersion: 3.5
