--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV['POSTGRES_PASSWORD'] %>
-  host: <%= ENV['POSTGRES_HOST'] %>
+  host: localhost
+  username: "<%= ENV['INSIDE_DOCKER'] ? 'brandcrunchbot' : 'your_local_username' %>"
+  password: "<%= ENV['INSIDE_DOCKER'] ? 'password123' : 'your_local_password' %>"
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS"){ 5 } %>
 
 development:
   <<: *default
@@ -13,11 +13,3 @@ development:
 test:
   <<: *default
   database: brandcrunchbot_test
-  host: brandcrunchbot_test_db
-  username: brandcrunchbot
-  password: password123
-
-production:
-  <<: *default
-  database: brandcrunchbot_production
-  url: <%= ENV['DATABASE_URL'] %>
