--- a/docker-compose-new.yml
+++ b/docker-compose-new.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   web:
     build:
@@ -35,8 +36,6 @@ services:
     environment:
       POSTGRES_USER: brandcrunchbot
       POSTGRES_PASSWORD: password123
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
