--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
       - redis_data:/data
     networks:
       - brandcrunchbot_network
+    ports:
+      - "6379:6379"
 
 networks:
   brandcrunchbot_network:
