Fortified Testing and Refactors (#8)
## ✨ Summary

This PR includes significant updates across the application’s environment setup, dependencies, codebase organization, and internal logic to modernize the stack and improve maintainability, performance, and testability.

---

## 🚀 What's Changed

### 🐳 Environment & Docker

* Added `.dockerignore` to reduce build context size and improve Docker build caching.
* Refactored `Dockerfile.dev`:

  * Pinned Ruby version to `3.4.4` for reproducibility.
  * Moved from implicit to explicit install steps.
  * Introduced an `entrypoint.sh` script for better boot-time control in containerized dev environments.

### 💎 Ruby & Gems

* Upgraded Ruby from `3.3.5` → `3.4.4` (updated `.ruby-version` and `Gemfile`).
* Modernized and expanded development/test toolchain:

  * Added `ruby-lsp` for editor support.
  * Added `timecop` for improved time-based testing.
  * Updated many gems including Rails (`7.1.4` → `7.1.5.1`), RSpec, RuboCop, and dependencies like `faker`, `dotenv`, `debug`, `redis`, etc.

### 🧹 Linting & Code Quality

* Updated `.rubocop.yml`:

  * Enabled `rubocop-rspec`.
  * Enabled all new cops by default (`NewCops: enable`).
  * Disabled autocorrect across the board to avoid silent changes.
  * Removed large manual `Exclude` list.

### ✅ Testing Setup

* Refactored `Guardfile`:

  * Extracted repetitive config into reusable Ruby methods.
  * Cleaned up structure and improved clarity for both `:focus` and `:default` guard groups.

---

## 🧠 Application Logic Changes

### 🧼 Cleanup

* Removed Slack-related methods from `ApplicationController` (`slack_current_user`, etc.) — no longer used.

### ✅ Controller Improvements

* Refactored `GodaddyController` to use strong parameters.
* Minor method compression and clarity tweaks in `OauthSessionsController` and `RegistrationsController`.

### 💼 Domain Auction Logic

* Improved auction job scheduling via `BuyItNowBot` and `BuyItNowBotScheduler`:

  * Added better retry logic wit

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,64 +1,54 @@
 require:
   - rubocop-performance
   - rubocop-rails
+  - rubocop-rspec
+  - ./rubocop/cop/style/redundant_keyword.rb
 
 AllCops:
-  Exclude:
-    - 'gems/**/*'
-    - 'more-stuff/**/*'
-    - 'db/**/*'
-    - 'doc/**/*'
-    - 'config/**/*'
-    - 'script/**/*'
-    - 'tmp/**/*'
-    - 'lib/ctm/uri/**/*'
-    - 'lib/twilio_ruby_old/**/*'
-    - 'vendor/bundle/**/*' # on CircleCI
-    - 'node_modules/**/*'
-  TargetRubyVersion: 3.3
+  TargetRubyVersion: 3.5
   NewCops: enable
-  SuggestExtensions: false
+  SuggestExtensions: true
 
 Layout/ArgumentAlignment:
   Enabled: false
-  Autocorrect: true
+  Autocorrect: false
 
 Layout/LineLength:
-  Enabled: true
-  Autocorrect: true
+  Enabled: false
+  Autocorrect: false
 
 Layout/MultilineMethodCallIndentation:
   Enabled: false
 
 Metrics/AbcSize:
   Enabled: true
-  Autocorrect: true
+  Autocorrect: false
   Max: 30
 
 Metrics/ClassLength:
   Enabled: true
-  Autocorrect: true
+  Autocorrect: false
 
 Metrics/MethodLength:
   Enabled: true
-  Autocorrect: true
+  Autocorrect: false
   Max: 20
 
 Naming/AccessorMethodName:
   Enabled: true
-  Autocorrect: true
+  Autocorrect: false
 
 Style/Documentation:
   Enabled: false
-  Autocorrect: true
+  Autocorrect: false
 
 Style/FrozenStringLiteralComment:
   Enabled: false
-  Autocorrect: true
+  Autocorrect: false
 
 Style/MutableConstant:
   Enabled: false
-  Autocorrect: true
+  Autocorrect: false
 
 Style/NumericPredicate:
   Enabled: true
