--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,34 @@
-name: brandcrunchbot
-
 services:
   web:
     build:
-      context: .             # Use the current directory as build context
-      dockerfile: Dockerfile.dev  # Use the Dockerfile in the current directory
+      context: .
+      dockerfile: Dockerfile.dev
+    container_name: brandcrunchbot_web
+    working_dir: /rails
     stdin_open: true
     tty: true
-    container_name: brandcrunchbot_web
     command: bundle exec rails server -b 0.0.0.0
-    working_dir: /rails
     volumes:
-      - .:/rails              # Mount the current directory to /rails inside the container
+      - .:/rails:cached
+      - bundle_cache:/rails/vendor/bundle
       - ~/.config/pry/pryrc:/rails/.pryrc:ro
       - ~/.config/guard/Guardfile:/rails/Guardfile:ro
-      - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
-      - /run/user/1000/bus:/run/user/1000/bus
-      - /tmp/.X11-unix:/tmp/.X11-unix
     environment:
-      - RAILS_ENV=development
-      - DATABASE_URL=postgres://brandcrunchbot:password123@db:5432/brandcrunchbot_development
       - REDIS_URL=redis://redis:6379/0
       - INSIDE_DOCKER=true
       - TERM=xterm-256color
-      - PRYRC=/rails/.pryrc
-      - GUARDFILE=/rails/Guardfile
       - DISPLAY=${DISPLAY}
       - UID=1000
       - GID=1000
       - BUY_IT_NOW_COUNTER=10
       - BUY_IT_NOW_SLEEP=0.5
-
     ports:
-      - "3000:3000"           # Expose port 3000 for the Rails app
+      - "3000:3000"
     depends_on:
-      - db                    # Ensure the db service is running before starting the web service
-      - test_db
-      - redis                 # Ensure Redis is running before starting the web service
+      - db
+      - redis
     networks:
-      - brandcrunchbot_network           # Use a custom network for communication
+      - brandcrunchbot_network
 
   db:
     image: postgres:latest
@@ -46,21 +36,10 @@ services:
     environment:
       POSTGRES_USER: brandcrunchbot
       POSTGRES_PASSWORD: password123
-      POSTGRES_DB: brandcrunchbot_development
+    ports:
+      - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data  # Persist PostgreSQL data
-    networks:
-      - brandcrunchbot_network
-
-  test_db:
-    image: postgres:latest
-    container_name: brandcrunchbot_test_db
-    environment:
-      POSTGRES_USER: brandcrunchbot
-      POSTGRES_PASSWORD: password123
-      POSTGRES_DB: brandcrunchbot_test
-    volumes:
-      - postgres_test_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - brandcrunchbot_network
 
@@ -68,9 +47,11 @@ services:
     image: redis:latest
     container_name: brandcrunchbot_redis
     volumes:
-      - redis_data:/data  # Persist Redis data
+      - redis_data:/data
     networks:
       - brandcrunchbot_network
+    ports:
+      - "6379:6379"
 
 networks:
   brandcrunchbot_network:
@@ -78,5 +59,5 @@ networks:
 
 volumes:
   postgres_data:
-  postgres_test_data:
   redis_data:
+  bundle_cache:
