--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,62 +1,21 @@
+plugins:
+  - rubocop-rails
+  - rubocop-rspec
+  - rubocop-erb
+
 AllCops:
   TargetRubyVersion: 3.4
   NewCops: enable
   SuggestExtensions: true
-
-plugins:
-  - rubocop-performance
-  - rubocop-rails
-  - rubocop-rspec
-
-require:
-  - ./rubocop/cop/style/redundant_keyword.rb
-
-Layout/ArgumentAlignment:
-  Enabled: false
-  Autocorrect: false
-
-Layout/LineLength:
-  Enabled: false
-  Autocorrect: false
-
-Layout/MultilineMethodCallIndentation:
-  Enabled: false
-
-Metrics/AbcSize:
-  Enabled: true
-  Autocorrect: false
-  Max: 30
-
-Metrics/ClassLength:
-  Enabled: true
-  Autocorrect: false
-
-Metrics/MethodLength:
-  Enabled: true
-  Autocorrect: false
-  Max: 20
-
-Naming/AccessorMethodName:
-  Enabled: true
-  Autocorrect: false
+  Exclude:
+    - 'db/schema.rb' # or whatever files you want to ignore
 
 Style/Documentation:
   Enabled: false
-  Autocorrect: false
 
 Style/FrozenStringLiteralComment:
   Enabled: false
-  Autocorrect: false
 
-Style/MutableConstant:
-  Enabled: false
-  Autocorrect: false
-
-Style/NumericPredicate:
-  Enabled: true
-  Autocorrect: true
-
-Rails/TimeZone:
-  Enabled: true
-  Exclude: 
-    - 'fake_godaddy_server/**/*.rb'
+# Metrics/MethodLength
+# Metrics/AbcSize
+# Metrics/MethodLength
